--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -1,10 +1,11 @@
-<div>
-    <h1>PDF Editor</h1>
-    <div class="page-container">
-      <canvas #canvas width="595" height="842"></canvas>
-      <div class="page-textarea" contenteditable="true"></div>
+<!-- editor.component.html -->
+<div class="editor">
+  <h1>PDF Editor</h1>
+  <div class="page-container">
+    <div class="page-textarea" contenteditable="true" #pageTextarea
+         (drop)="handleImageDrop($event)" (dragover)="allowDrop($event)">
+      <p>Your text goes here...</p>
     </div>
-    <a *ngIf="pdfDataUri" [href]="pdfDataUri" download="generated.pdf">
-      <button (click)="updateCanvas($event)">Download PDF</button>
-    </a>
   </div>
+  <button (click)="generatePDF()">Download as PDF</button>
+</div>
