--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -7,5 +7,8 @@
       <p>Your text goes here...</p>
     </div>
   </div>
+  <div>
+    KSZTAŁTY
+  </div>
   <button (click)="generatePDF()">Download as PDF</button>
 </div>
