--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -1,4 +1,3 @@
-<!-- editor.component.html -->
 <div class="editor">
   <h1>PDF Editor</h1>
   <div class="page-container">
@@ -6,6 +5,9 @@
          (drop)="handleImageDrop($event)" (dragover)="allowDrop($event)">
       <p>Your text goes here...</p>
     </div>
+    <button mat-icon-button (click)="insertParagraph()">
+      <mat-icon>format_align_left</mat-icon>
+    </button>
   </div>
   <button (click)="generatePDF()">Download as PDF</button>
 </div>
