--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -1,13 +1,19 @@
 <div class="editor">
   <h1>PDF Editor</h1>
+  <div class="toolbar">
+    <button mat-icon-button class="insert-button" (click)="insertParagraph()">
+      <mat-icon>format_align_left</mat-icon>
+    </button>
+    <button mat-icon-button class="draw-button" (click)="toggleDrawing()">
+      <mat-icon>{{ isDrawing ? 'gesture' : 'gesture_off' }}</mat-icon>
+    </button>
+  </div>
   <div class="page-container">
     <div class="page-textarea" contenteditable="true" #pageTextarea
          (drop)="handleImageDrop($event)" (dragover)="allowDrop($event)">
       <p>Your text goes here...</p>
     </div>
-    <button mat-icon-button (click)="insertParagraph()">
-      <mat-icon>format_align_left</mat-icon>
-    </button>
   </div>
   <button (click)="generatePDF()">Download as PDF</button>
 </div>
+
