--- a/Pdfowicz/src/app/components/dashboard.component.css
+++ b/Pdfowicz/src/app/components/dashboard.component.css
@@ -18,12 +18,13 @@ svg{
 }
 
 .page-textarea {
-  min-height: 400px;
+  text-align: left;
+  width: 595px;
+  min-height: 842px;
   background-color: white;
   border: 1px solid #ccc;
   padding: 10px;
   overflow-y: auto;
-  width: 100%;
   box-sizing: border-box;
   position: relative; /* Added this line to make it a positioned container */
 }
