--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -1,19 +1,19 @@
 <div class="editor">
   <h1>PDF Editor</h1>
   <div class="toolbar">
-    <button mat-icon-button class="insert-button" (click)="insertParagraph()">
-      <mat-icon>format_align_left</mat-icon>
-    </button>
-    <button mat-icon-button class="draw-button" (click)="toggleDrawing()">
-      <mat-icon>{{ isDrawing ? 'gesture' : 'gesture_off' }}</mat-icon>
-    </button>
+
   </div>
   <div class="page-container">
-    <div class="page-textarea" contenteditable="true" #pageTextarea
-         (drop)="handleImageDrop($event)" (dragover)="allowDrop($event)">
-      <p>Your text goes here...</p>
-    </div>
-  </div>
-  <button (click)="generatePDF()">Download as PDF</button>
-</div>
+    <kendo-pdf-export #pdf paperSize="A4">
+      <div class="page-textarea" contenteditable="true" #pageTextarea>
+        <p>Your text goes here...</p>
 
+      </div>
+    </kendo-pdf-export>
+  </div>
+  <div class="example-config">
+    <button kendoButton (click)="exportAsPDF()">
+      Download as PDF
+    </button>
+  </div>
+</div>
