--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -6,8 +6,7 @@
   </div>
   <div class="page-container">
     <kendo-pdf-export #pdf paperSize="A4">
-      <div class="page-textarea" contenteditable="true" #pageTextarea (mouseup)="saveSelection()">
-        <p>Your text goes here...</p>
+      <div *ngFor="let page of pages" class="page-textarea" contenteditable="true" (input)="checkOverflow($event)" (mouseup)="saveSelection()">
       </div>
     </kendo-pdf-export>
   </div>
