Focus on newly added page

--- a/Pdfowicz/src/app/components/dashboard.component.css
+++ b/Pdfowicz/src/app/components/dashboard.component.css
@@ -28,6 +28,7 @@ svg{
   margin: auto;
   margin-bottom: 20px;
   overflow: none;
+  text-overflow: ellipsis;
   text-align: left;
   line-break: anywhere;
 }
