fixing problem of adding image on chrome

--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -11,7 +11,7 @@
     <button mat-icon-button (click)="insertShape('rectangle')">
       <mat-icon>crop_16_9</mat-icon>
     </button>
-    <input type="file" id="fileInput" style="display: none" (change)="handleFileInput($event)">
+    <input type="file" id="imageInput" style="display: none" (change)="handleImageInput($event)">
     <button mat-icon-button (click)="addImage()">
       <mat-icon>add_a_photo</mat-icon>
     </button>
@@ -22,7 +22,7 @@
 
   <div class="page-container" (click)="setCursorPosition($event)" #pageContainer>
     <kendo-pdf-export #pdf paperSize="A4">
-      <div *ngFor="let page of pages" class="page-textarea" contenteditable="true" (paste)="checkOverflow($event)" (input)="checkOverflow($event)" (mouseup)="saveSelection()" #editor>
+      <div *ngFor="let page of pages" class="page-textarea" contenteditable="true" (paste)="checkOverflow($event)" (input)="checkOverflow($event)"  #editor>
       </div>
     </kendo-pdf-export>
   </div>
