drag and drop functionality for adding photo added

--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -20,7 +20,14 @@
     </button>
   </div>
 
-  <div class="page-container" (click)="setCursorPosition($event)" #pageContainer>
+  <div class="page-container"
+       (click)="setCursorPosition($event)"
+       (dragover)="handleDragOver($event)"
+       (drop)="handleDrop($event)"
+       (dragenter)="handleDragEnter($event)"
+       (dragleave)="handleDragLeave($event)"
+       [ngClass]="{'dragging-file': draggingFile}"
+       #pageContainer>
     <kendo-pdf-export #pdf paperSize="A4">
       <div *ngFor="let page of pages" class="page-textarea" contenteditable="true" (paste)="checkOverflow($event)" (input)="checkOverflow($event)"  #editor>
       </div>
