draganddrop for firefox working

--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="editor">
+<div class="editor" (dragover)="handleDragOver($event)" (drop)="handleDrop($event)">
   <h1>PDF Editor</h1>
 
   <div class="toolbar">
