Fix to enable mobile work + deleting implemented again

--- a/Pdfowicz/src/app/components/dashboard.component.html
+++ b/Pdfowicz/src/app/components/dashboard.component.html
@@ -15,9 +15,10 @@
     <button mat-icon-button (click)="addImage()">
       <mat-icon>add_a_photo</mat-icon>
     </button>
-    <button mat-icon-button (click)="insertShape('rubber')" [style.color]="rubberButtonColor">
+    <button mat-icon-button (click)="activateRubberTool()" [style.color]="rubberButtonColor">
       <mat-icon>highlight_off</mat-icon>
     </button>
+
   </div>
 
   <div class="page-container"
